assets/scss/components/_navigation.scss
/*
Header

Header Navigation is used to display information such as title and links to the user.

Markup:
<nav role="navigation">
  <a href="#" class="header__menu__proposition-name">Title</a>
  <ul class="header__menu__proposition-links">
      <a href="#">Link 1</a>
      <a href="#">Link 2</a>
      <a href="#">Link 3</a>
  </ul>
</nav>

Styleguide Navigation.Header
*/

.header__menu__proposition-name {
  @include bold-24;
  text-decoration: none;
  color: $white;
}

a.header__menu__proposition-name {

  &:hover,
  &:focus,
  &:active {
    text-decoration: underline;
  }

}

.header__menu__proposition-links {
  @include bold-16;
  float: right;
  list-style-type: none;
  padding: 0;
  margin: 0;

  @include media-down(tablet) {
    width: 100%;
  }

  li {
    display: inline;
    padding-right: em(15);
  }

  a {
    @include bold-16;
    color: $white;
    text-decoration: none;
  }
}


/*
Page

Navigation for the page. As shown this can use markup with an `ol` or `ul`.

Markup:
<nav class="page-navigation">
  <ul>
    <li><a href="#">Link Text</a></li>
    <li><a href="#">Link Text</a></li>
    <li><a href="#">Link Text</a></li>
  </ul>
</nav>
<nav class="page-navigation">
  <ol>
    <li><a href="#">Link Text</a></li>
    <li><a href="#">Link Text</a></li>
    <li><span>Link Text</span></li>
  </ol>
</nav>

Styleguide Navigation.Page

*/

.page-navigation {
  @include media-down(mobile) {
    margin-top: 0;
  }

  width: 64%;
  float: left;

  ol {
    margin: 0;
    padding: 0;
    display: inline;
    overflow: hidden;
    width: 50%;

    @include ie-lte(7) {
      width: 49%;
    }

    @include media-down(mobile) {
      float: none;
      display: block;
      width: auto;
    }
  }

  li {
    list-style: decimal;
    list-style-position: outside;
    margin-right: 0.75em;
    margin-left: 1.5em;
    clear: left;

    @include ie-lte(7) {
      list-style: none;
      margin-left: 0;
      display: list-item;
    }

    @include media-down(mobile) {
      float: none;
      margin: 0 1em 0 2.25em;
    }

    a {
      padding: 0.25em 1em 0.25em 0;
      @include core-16;

      @include ie-lte(7) {
        display: inline;
        float: left;
      }
    }

    @include media-down(mobile) {
      @include core-19($line-height: (45/19));

      span, a {
        border-top: solid 1px $grey-6;
        margin: 0 -1em 0 -2.25em;
        padding: 1em 1em 1em 2.75em;
      }
    }
  }
}

.back-link {
  @include core-19();
  border-bottom: 1px solid $black;
  text-decoration: none;
  display: inline-block;
  margin-bottom: em(30);

  &:before {
    content: "\2039"; // Unicode &lsaquo;
    padding-right: em(5);
  }

}

a.back-link {
  color: $black;
}

#global-breadcrumb {
  margin:0;
  padding-top:0;
  
  &.global-breadcrumb--no-border {
    padding-bottom: 1.5em;
    border-bottom: 0;
  }
  
  li {
    margin-bottom: 0;
  }
  
}

a.back-to-top-link {
  @include bold-16;
  margin: 0 0 em(10) 0;

  &:visited {
    color: $govuk-blue-colour;
  }

}

/*
Page Navigation

A page navigation element with a previous and next link.

Markup:
<nav class="page-nav" role="navigation" aria-label="Page navigation">
  <ul>
    <li class="page-nav__item page-nav__item--previous">
      <a class="page-nav__link page-nav__link-previous" title="Navigate to previous part" rel="prev" href="#">
        <span class="page-nav__label">Previous </span>
        <span class="page-nav__title">Overview</span>
      </a>
    </li>
    <li class="page-nav__item page-nav__item--next">
      <a class="page-nav__link page-nav__link-next" title="Navigate to next part" rel="next" href="#">
        <span class="page-nav__label">Next</span>
        <span class="page-nav__title">Inheritance Tax reliefs</span>
      </a>
    </li>
  </ul>
</nav>

Styleguide Navigation.Page Navigation
*/
.page-nav {
  display:block;
  margin:em(64) 0 0 0;
  padding:em(12) 0;
  border-bottom:1px solid $light-grey;

  @include contain-floats;

  @include media(mobile) {
    margin:em(32) 0 0 0
  }
}

.page-nav__item {
  @include core-19;
  line-height:1.25;
  float:left;
  text-align:right;
  margin:em(5) 0;
  padding:0;
  width:49%;

  @include media(mobile) {
    @include core-14;
    line-height:1.14286;
    float:none;
    width:100%
  }
}

.page-nav__item--previous {
  float:left;
  text-align:left;
}

.page-nav__link {
  display:block;
  color:$govuk-blue-colour;
  text-decoration:none;

  &:hover, &:active {
    background-color:$shaded-bg-grey;
  }

  &:focus {
    outline: em(3) solid $yellow;
    background-color: transparent;

    @include media(mobile) {
      outline-width: em(3, 16);
    }
  }

  @include media(mobile) {
    @include core-19;
  }
}

.page-nav__link-previous {
  padding:em(14) 0 em(14) em(48);

  &:before {
    background:transparent url(../images/icons/arrow-sprite.png) no-repeat em(-20) em(-11);
    margin:em(-4) 0 0 em(-32);
    float:left;
    width:em(30);
    height:em(38);
    content:" ";

    @include media(mobile) {
      font-size: 19px;
    }
  }
}

.page-nav__item--next {
  float:right;
  text-align:right;
}

.page-nav__link-next {
  padding:em(14) em(48) em(14) 0;

  &:before {
    background:transparent url(../images/icons/arrow-sprite.png) no-repeat em(-102) em(-11);
    margin:em(-4) em(-32) 0 0;
    float:right;
    width:em(30);
    height:em(38);
    content:" ";
  }

  @include media(mobile) {
    font-size: 19px;
    text-align:right
  }
}

.page-nav__label {
  @include core-27;
  line-height:1.25;
  margin-bottom:em(3, 27);
  display:block;

  @include media(mobile) {
    @include core-24;
  }
}

.page-nav__title {
  text-decoration:underline;

  @include media(mobile) {
    @include core-19;
  }
}

